# rdl

./: .gitignore  .gitmodules  Cargo.toml  docker-compose-local.yml  docker-compose.yml  justfile
.github/workflows/: docker-build-push.yml
onchain-riddle-contracts/: .env.example  foundry.toml  justfile
onchain-riddle-contracts/broadcast/DeployOnchainRiddle.s.sol/8453/: run-1739683526.json  run-latest.json
onchain-riddle-contracts/script/: DeployOnchainRiddle.s.sol
onchain-riddle-contracts/test/: OnchainRiddle.t.sol
onchain-riddle-robot/: .env.example  Cargo.toml  Dockerfile  README.md
onchain-riddle-robot/src/: main.rs
onchain-riddle-web/: .env.example  Dockerfile  README.md  package.json
onchain-riddle-web/src/app/: layout.tsx  page.tsx
onchain-riddle-web/src/lib/: ethereum.ts
onchain-riddle-web/src/lib/contracts/: OnchainRiddle.ts
