[package]
name = "onchain-riddle-robot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["abigen"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenv = "0.15.0"
